force-app/main/default/objects/Study_Participant__c/Study_Participant__c.object-meta.xml
<CustomObject>
    <label>Study Participant</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Study Participant Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Participant</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>