force-app/main/default/objects/Study_Participant__c/fields/Clinical_Study__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Study</label>
    <referenceTo>Clinical_Study__c</referenceTo>
    <relationshipLabel>Study Participant</relationshipLabel>
    <relationshipName>Study_Participant</relationshipName>
    <type>Lookup</type>
</CustomField>