force-app/main/default/objects/Study_Participant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Study Participant</relationshipLabel>
    <relationshipName>Study_Participant</relationshipName>
    <type>Lookup</type>
</CustomField>