force-app/main/default/objects/Study_Participant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>open</fullName>
                <default>true</default>
                <label>open</label>
            </value>
            <value>
                <fullName>closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>